I added result of testing and corrected CI file, also i changed II on AI in all my files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,8 @@ jobs:
       - name: Build and run tests
         run: |
           make tests
-
+          ./tests
       - name: Clean all
         run: |
           make cleanall
+
